# tauri-plugin-http-client

./: .gitignore  .markdownlint-cli2.cjs  Cargo.toml  LICENSE  README.md  build.rs  eslint.config.cjs  package-lock.json  package.json  rollup.config.js  tsconfig.json  tsconfig.src.json  tsconfig.test.json  vitest.config.ts
.cargo/: config.toml
.github/workflows/: ci.yml
examples/tauri-app/: README.md  package.json  vite.config.js
examples/tauri-app/src/: index.html  main.js  styles.css
examples/tauri-app/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
examples/tauri-app/src-tauri/capabilities/: default.json
examples/tauri-app/src-tauri/src/: lib.rs  main.rs
guest-js/: errors.test.ts  errors.ts  headers.test.ts  headers.ts  http-client.test.ts  http-client.ts  index.ts  tsconfig.json  types.ts
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: abort_request.toml
permissions/schemas/: schema.json
src/: allowlist.rs  client.rs  commands.rs  config.rs  error.rs  lib.rs  request.rs  response.rs  types.rs
