[package]
name = "tauri-plugin-http-client"
version = "0.1.0"
description = "HTTP client plugin for Tauri applications"
license = "MIT"
edition = "2024"
rust-version = "1.89"
links = "tauri-plugin-http-client"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]

[dependencies]
base64 = "0.22.1"
futures-util = { version = "0.3.31", default-features = false }
parking_lot = "0.12.5"
reqwest = { version = "0.12.15", default-features = false, features = ["rustls-tls", "json", "gzip", "brotli", "deflate", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.140"
tauri = { version = "2.9.3" }
thiserror = "2.0.17"
tokio = { version = "1.45.1", features = ["sync"] }
tracing = { version = "0.1.41", default-features = false, features = ["std", "log", "release_max_level_warn"] }
url = "2.5.4"

[dev-dependencies]
tokio = { version = "1.45.1", features = ["rt-multi-thread", "macros", "time"] }
wiremock = "0.6.2"

[build-dependencies]
tauri-plugin = { version = "2.5.1", features = ["build"] }
